[workspace]
members=[
    "sdk/logsdk",
    "sdk/pipeline2",
    "framework/http",
    "demo/selfdemo",
    "demo/rocket",
    "demo/tokio",
    "demo/cell",
    "base/cell-base-common",
    "base/core",
    "useless/hyper",
    "useless/demo",
    "useless/tests",
    "useless/shaku",
    "useless/clapdemo",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
