[workspace]
members=[
    "sdk/logsdk",
    "sdk/pipeline2",
    "framework/http",
    "demo/selfdemo",
    "demo/rocket",
    "demo/benchmark",
    "demo/tokio",
    "demo/cell",
    "demo/zk",
    "demo/zk2",
    "base/cell-base-common",
    "base/core",
    "useless/hyper",
    "useless/demo",
    "useless/shaku",
    "useless/clapdemo",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
