[workspace]
members=[
    "sdk/logsdk",
    "sdk/pipeline2",
    "sdk/configuration",
    "framework/http",
    "demo/selfdemo",
    "demo/rocket",
    "demo/benchmark",
    "demo/cell",
    "base/cell-base-common",
    "base/core",
    "useless/hyper",
    "useless/demo",
    "useless/shaku",
    "useless/clapdemo",
    "extensions/zkextension",
    "sdk/merkle_tree",
    "sdk/tree"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
