[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
hyper = "0.14.18"
http = "0.2.1"
bytes = "1.1.0"
indexmap = "1.8.1"
logsdk = { version = "0.1.0", path = "../../sdk/logsdk" }
json = "*"
uncased = "0.9.7"
chrono = "0.4.19"
futures = "0.3.21"
rocket = "0.5.0-rc.2"
serde = "1.0.137"
serde_json = "1.0.81"
futures-channel = "0.3.21"
async-trait = "0.1.53"