[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logsdk = { version = "0.1.0", path = "../../sdk/logsdk" }
cell-core = { version = "0.1.0", path = "../../base/core" }
pipeline2={ version = "0.1.0", path = "../../sdk/pipeline2" }
cellhttp={version="0.1.0",path= "../../framework/http"}
bytes = "1.1.0"
tokio="1.21.0"
