[package]
name = "zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
random = "0.13.2"
ark-bn254 = { version = "0.3.0" }
num-traits = { version = "0.2.0", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
# ZKP Generation
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
ark-poly = { version = "^0.3.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false }
color-eyre = "0.6.2"
logsdk = { version = "0.1.0", path = "../../sdk/logsdk" }
cell-core = { version = "0.1.0", path = "../../base/core" }
pipeline2={ version = "0.1.0", path = "../../sdk/pipeline2" }
cellhttp={version="0.1.0",path= "../../framework/http"}