[package]
name = "zkextension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph"]


[dependencies]
plotters = "0.3.5"
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

merkle_tree = {path="../../sdk/merkle_tree"}
tree={path="../../sdk/tree"}
anyhow = "1.0.69"
crc32fast = "1.2.0"
#halo2aggregator-s = { git = "https://github.com/DelphinusLab/halo2aggregator-s.git", tag = "bisect-lookup-0.2.1"}
halo2_proofs ="0.3.0"
#halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }

franklin_crypto = { package = "franklin-crypto", version = "0.0.5", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "beta", features = ["multicore", "plonk"] }
recursive_aggregation_circuit = { package = "recursive_aggregation_circuit", version = "1.0.0", git = "https://github.com/matter-labs/recursive_aggregation_circuit.git", branch = "master" }
byteorder = "1.4.3"
hex = "0.4.3"
num-bigint = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.8"
hash-db = { version = "0.15.2", default-features = false }
keccak-hasher = "0.15.3"
rescue_poseidon={git="https://github.com/matter-labs/rescue-poseidon.git"}